# stats

./: .gitignore  Makefile  README.md  binom.c  binom_demo.cc  binom_demo.txt  binom_test.c  fisher.c  fisher.py  fisher_demo.cc  fisher_demo.txt  fisher_test.c  fisher_test.cc  fisher_test.txt  hwe_demo.cc  hwe_demo.txt  hwe_test.cc  snphwe2.c  snphwe_test.c  snphwe_test.txt
Python/: MANIFEST.in  README.md  pbinom_accuracy.py  pbinom_accuracy_test.py  pbinom_benchmark.py  pyproject.toml  setup.py
Python/src/exact_tests/: exact.pyx
Python/src/include/: LICENSE.QD  binom.cc  binom.h  binom_detail.cc  binom_detail.h  fisher.cc  fisher.h  hypergeom.cc  hypergeom.h  hypergeom_detail.cc  hypergeom_detail.h  nchypergeom_fisher.cc  nchypergeom_fisher.h  plink2_base.cc  plink2_base.h  plink2_float.cc  plink2_float.h  plink2_highprec.cc  plink2_highprec.h  plink2_hwe.cc  plink2_hwe.h  plink2_ln.cc  plink2_ln.h  special_func.cc  special_func.h
Python/src/mini-gmp/: mini-gmp.c  mini-gmp.h
Python/tests/: test_HWE.py  test_binom.py  test_exact.py  test_fisher.py  test_hypergeom.py
Python/utils/: HWE_accuracy.py  HWE_benchmark.py  binom_pmf_vec_benchmark.py  binomtest_accuracy.py  binomtest_benchmark.py  fisher_exact_22_accuracy.py  fisher_exact_22_benchmark.py  mpfr_impls.py  odds_ratio_accuracy.py  odds_ratio_benchmark.py  odds_ratio_concordance.py  pbinom_accuracy.py  pbinom_benchmark.py  phyper_accuracy.py  phyper_benchmark.py
exactr/: .Rbuildignore  DESCRIPTION  LICENSE.note  NAMESPACE  NEWS.md  README.md  configure  configure.ac
include/: binom.cc  binom.h  fisher.cc  (+21 more)
(+27 files in other folders)
