[build-system]
requires = [
    # pin setuptools on pypy to work around bug: https://github.com/pypa/distutils/issues/283 https://github.com/pypa/cibuildwheel/issues/1983
    "setuptools < 72.2; platform_python_implementation == 'PyPy'",
    "setuptools ; platform_python_implementation != 'PyPy'",
    "Cython>=3.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "exact_tests"
version = "0.7.0"
authors = [
  { name="Christopher Chang", email="chrchang@alumni.caltech.edu" },
]
description = "Accurate and efficient binomial, Hardy-Weinberg equilibrium, and Fisher's exact tests."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "LGPL-3.0-only"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/chrchang/stats"
Issues = "https://github.com/chrchang/stats/issues"
